--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -81,15 +81,15 @@
       <div class="panel-body">
 
         <div class="row">
-          <% @stat_hash.each do |stat, label| %>
+          <% @stats.each do |stat| %>
             <div class="col-xs-12 col-md-6">
               <div class="stat-box-dashboard text-center">
                 <div class="stat-box-dashboard-text">
-                  <%= stat.try(:count) %>
+                  <%= stat.count %>
                 </div><!-- stat-box-text -->
 
                 <div class="stat-box-dashboard-label">
-                  <%= label.upcase %>
+                  <%= stat.text %>
                 </div><!-- stat-box-label -->
               </div><!-- stat-box -->
             </div><!-- col-xs-12 col-md-4 -->
