add blurb about TDD in ruby challenge

--- a/app/views/ruby_lessons/lessons/lesson_20.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_20.html.erb
@@ -4,10 +4,60 @@
   Now that you have some experience with Ruby codes, let's get familiar with some testing the ruby codes.
 </p>
 
-<h3>Making First Test Pass</h3>
+<h2>Making Our First Test Pass</h2>
+
+<p>
+  As a Ruby developer, being able to write <em>tests</em> and developing your code in a <em>Test Driven</em> manner will take you far in your career. That's why we incorporate <strong>Test Driven Development</strong> practices from the start.
+</p>
+
+<div class="well">
+  <h3>Test Driven Development</h3>
+
   <p>
-    Given a bunch of tests, you need to write code such that every code passes the test. You should begin writing passing test for one failure at a time. This method is known as <strong>Test Driven Development</strong>.
+    Let's say we want to write a method called <code>say_hello</code> that takes in a name and outputs <code>"Hello, name!"</code>.
   </p>
+
+  <p>
+    When we start building the method, <strong>we first <em>intuitively</em> think about what the output should be.</strong>
+  </p>
+
+  <p>
+    For example in this case, if I input <code>"Mark"</code>, then the output should be <code>"Hello, Mark!"</code>. If the input is <code>"Bob"</code>, then the output should be <code>"Hello, Bob!"</code>.
+  </p>
+
+  <p>
+    <strong>Notice how we are thinking about what the output should be <em>before</em> we have started writing any code.</strong>
+  </p>
+
+  <p>
+    After we think about what the output should be, the next step is to actually write the code and see if it works.
+  </p>
+
+  <p>
+    If it doesn't work, we edit the code, run the code, and repeat, until it finally works.
+  </p>
+
+  <p>
+    <strong>This is the basic methodology of TDD:</strong>
+  </p>
+
+  <ol>
+    <li>Before writing any code, we think about what the output should be</li>
+    <li>We write the code</li>
+    <li>We <em>test</em> to see if the output matches what we expected</li>
+    <li>If it didn't match, rewrite the code until the output matches</li>
+  </ol>
+
+  <p>
+    By doing this, <strong>not only can we be more confident about our code, but we can also write higher quality code as well.</strong>
+  </p>
+
+  <p>
+    You will learn more in-depth about Test Driven Development in the later lessons - for now, just know that knowing this process is extremely important as a developer.
+  </p>
+
+</div>
+
 
 <div class="well">
   <h3>Getting Started</h3>
