--- a/app/views/ruby_lessons/lessons/lesson_19.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_19.html.erb
@@ -86,7 +86,7 @@ Foo
   Next, write your code in the text editor:
 </p>
 
-<%= image_tag 'ruby_lessons/repl_code.png', class: 'img-responsive screenshot' %>
+<%= image_tag 'ruby_lessons/repl_code.png', class: 'img-responsive screenshot', style: 'width: 50%' %>
 
 <p>
   Next, press "run", and check your output.
