--- a/app/views/ruby_lessons/lessons/lesson_12.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_12.html.erb
@@ -152,7 +152,7 @@
   <h3>Answers</h3>
   <ul>
     <li><code>true && !false</code> => <code>true</code></li>
-    <li><code>false || !false</code> => <code>false</code></li>
+    <li><code>false || !false</code> => <code>true</code></li>
     <li><code>true && (false || true)</code> => <code>true</code></li>
     <li><code>true && (true && false)</code> => <code>false</code></li>
   </ul>
