refactor ruby lessons

--- a/app/views/lessons/_sidebar.html.erb
+++ b/app/views/lessons/_sidebar.html.erb
@@ -3,19 +3,21 @@
   <li><%= link_to '<i class="fa fa-home" aria-hidden="true"></i> <span class="nav-text">All Courses</span>'.html_safe, courses_path %></li>
   <li class="course-title"><%= link_to @current_course_title, "/" + @current_course_link %></li>
 
-  <% @current_course_lessons.each_with_index do |chapter, i| %>
 
-    <li>
-      <a class="chapter-nav" data-target="#chapter_<%= i %>" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><%= chapter[0] %></a>
-      <ul class="nav nav-stacked collapse left-submenu" id="chapter_<%= i %>" style="position: relative;">
-        <% chapter[1].each do |lesson| %>
-          <% if controller_name.classify == "Progression" %>          
-            <li><%= link_to "#{lesson[0]}. #{lesson[1]} #{lesson_completed(@progression_lesson_ids.include?(lesson[0]))}".html_safe, "/#{@current_course_link}/#{(lesson[0])}" %></li>
-          <% else %>
-            <li><%= link_to "#{lesson[0]}. #{lesson[1]} #{lesson_completed(@progression_lesson_ids.include?(lesson[0]))}".html_safe, "/#{@current_course_link}/#{(lesson[0])}" %></li>
+  
+    <% @current_course_chapters.each_with_index do |chapter, i| %>
+      <li>
+        <a class="chapter-nav" data-target="#chapter_<%= i %>" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><%= chapter.title %></a>
+
+        <ul class="nav nav-stacked collapse left-submenu" id="chapter_<%= i %>" style="position: relative;">
+          <% @current_course_lessons.select{|lesson| lesson.chapter == chapter}.each do |lesson| %>
+            <% if controller_name.classify == "Progression" %>          
+              <li><%= link_to "#{lesson.id}. #{lesson.title} #{lesson_completed(@progression_lesson_ids.include?(lesson.id))}".html_safe, "/#{@current_course_link}/#{(lesson.id)}" %></li>
+            <% else %>
+              <li><%= link_to "#{lesson.id}. #{lesson.title} #{lesson_completed(@progression_lesson_ids.include?(lesson.id))}".html_safe, "/#{@current_course_link}/#{(lesson.id)}" %></li>
+            <% end %>
           <% end %>
-        <% end %>
-      </ul>
-    </li>
-  <% end %>
+        </ul>
+      </li>
+    <% end %>
 </ul>
