--- a/app/views/ruby_lessons/lessons/lesson_1.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_1.html.erb
@@ -1,4 +1,4 @@
-<h1><%= title_for(RubyLesson, 1, 1) %></h1>
+<h1><%= title_for(RubyLesson, params[:id].to_i) %></h1>
 
 <p>
   Welcome to the world of Ruby! You'll finally get the chance to learn one of the most popular languages today.
