--- a/app/views/applicants/index.html.erb
+++ b/app/views/applicants/index.html.erb
@@ -29,7 +29,7 @@
 
       <% if user.last_lesson %>
         <h5><strong>Currently On: </strong></h5>
-        <h5><label class="tag_label"><%= get_lesson_name(user.last_lesson.course_name, user.last_lesson.lesson_id) %></label></h5>
+        <h5><label class="tag_label"><%= get_lesson_title(user.last_lesson.course_name, user.last_lesson.lesson_id) %></label></h5>
         <h5 style="color: #d9534f"><%= user.last_lesson.course_name.split(/(?=[A-Z])/).join(" ").chomp("Lesson") %> Lesson <%= user.last_lesson.lesson_id %></h5>
       <% end %>
 
