--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -1,4 +1,4 @@
-<% title(get_lesson_name(controller_name.classify.underscore, params[:id]) + " | TECHRISE") %>
+<% title(get_lesson_title(controller_name.classify, params[:id]) + " | TECHRISE") %>
 
 <style type="text/css">
 .course_html {
