--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -12,7 +12,7 @@
   <div class="col-xs-12 col-md-6">
     <% if @last_lesson %>
 
-      <% lesson_name = get_lesson_name(@last_lesson.parameters[:course_name], @last_lesson.parameters[:lesson_id]) %>
+      <% lesson_name = get_lesson_title(@last_lesson.parameters[:course_name], @last_lesson.parameters[:lesson_id]) %>
       <div class="panel">
         <div class="panel-body text-center">
           <div class="row">
@@ -138,8 +138,10 @@
         <ul class="unindented_ul">
           <% @questions.each do |question| %>
 
-            <% course_name = Tags::LESSONS[question.course_name.underscore + "s"].keys[question.lesson_id - 1][1] %>
+            <% course_name = get_lesson_title(question.course_name, question.lesson_id) %>
+            
             <li><span class="question_list_title"><%= link_to question.title, question_path(question) %></span> in <span class="question_list_course_name"><%= course_name %></span> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if question.resolved %></li>
+
           <% end %>
         </ul>
 
@@ -161,7 +163,7 @@
         <ul class="unindented_ul">
           <% @submissions.each do |submission| %>
 
-            <% course_name = get_lesson_name(submission.course_name, submission.lesson_id) %>
+            <% course_name = get_lesson_title(submission.course_name, submission.lesson_id) %>
 
             <li><span class="question_list_title"><%= link_to submission.title, submission_path(submission) %></span> in <span class="question_list_course_name"><%= course_name %></span> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if submission.approved %></li>
           <% end %>
