--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -394,9 +394,8 @@ span.radio.inline {
     padding-bottom: 10px;
   }
   h3 {
-    border-left: 5px solid #ec6952;
-    border-bottom: 2px solid #ec6952;
-    padding-left: 10px;
+    font-family: 'Lato', open-sans;
+    font-size: 30px;
   }
   li {
     font-size: 16px;
