edit ideator lessons to twitr

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -71,7 +71,7 @@
 
   <%= render partial: 'course', locals: {course: 'Ruby Fundamentals', course_name: 'Ruby is a beautiful programming language that makes programming so much easier for beginners. Master the fundamentals of programming while learning Ruby.', available: true, course_link: ruby_path, course_access: 'ruby', controller_name: 'RubyLesson'} %>
 
-  <%= render partial: 'course', locals: {course: 'Ideator - An idea sharing app', course_name: 'Create your first Ruby on Rails application. You\'ll be building an idea sharing/discovery app where anyone can post their ideas and share them with the world.', available: true, course_link: ideator_path, course_access: 'ideator', controller_name: 'IdeatorLesson'} %>
+  <%= render partial: 'course', locals: {course: 'Twitr', course_name: 'Create your first Ruby on Rails application. You\'ll be building an idea sharing/discovery app where anyone can post their ideas and share them with the world.', available: true, course_link: twitr_path, course_access: 'twitr', controller_name: 'TwitrLesson'} %>
 
   <%= render partial: 'course', locals: {course: 'MVC', course_name: '', available: true, course_link: mvc_path, course_access: 'mvc', controller_name: 'MvcLesson'} %>
 
